fixes about review